// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeader Style tests should render with clickable styles 1`] = `
.circuit-0 {
  vertical-align: middle;
  cursor: pointer;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

tbody .circuit-0:hover td,
tbody .circuit-0:hover th {
  color: #3388FF;
  background-color: #FAFBFC;
}

<tr
  class="circuit-0 circuit-1"
>
  Foo
</tr>
`;

exports[`TableHeader Style tests should render with default styles 1`] = `
.circuit-0 {
  vertical-align: middle;
}

tbody .circuit-0:last-child th,
tbody .circuit-0:last-child td {
  border-bottom: none;
}

<tr
  class="circuit-0 circuit-1"
>
  Foo
</tr>
`;
